--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepare": "cp example/src/react-native-scroll-indicator/* src/ && bob build",
+    "build": "cp example/src/react-native-scroll-indicator/* src/ && bob build",
+    "prepare": "husky install",
     "release": "yarn run prepare && release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install"
@@ -52,8 +53,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@evilmartians/lefthook": "^1.2.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
@@ -64,6 +65,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "^28.1.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
