--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@fanchenbao/react-native-scroll-indicator": "file:../fanchenbao-react-native-scroll-indicator-0.1.0.tgz",
     "react": "18.1.0",
     "react-native": "0.70.6"
   },
