--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "homepage": "https://github.com/FanchenBao/react-native-scroll-indicator#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
