--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,12 +2,12 @@ pre-commit:
   parallel: true
   commands:
     lint:
-      files: git diff --name-only @{push}
-      glob: "*.{js,ts,jsx,tsx}"
-      run: npx eslint {files}
+      # files: git diff --name-only @{push}
+      glob: '*.{js,ts,jsx,tsx}'
+      run: npx eslint {staged_files}
     types:
-      files: git diff --name-only @{push}
-      glob: "*.{js,ts, jsx, tsx}"
+      # files: git diff --name-only @{push}
+      glob: '*.{js,ts, jsx, tsx}'
       run: npx tsc --noEmit
 commit-msg:
   parallel: true
