--- a/example/package.json
+++ b/example/package.json
@@ -5,42 +5,36 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "clean": "react-native-clean-project"
   },
   "dependencies": {
     "@fanchenbao/react-native-scroll-indicator": "file:../fanchenbao-react-native-scroll-indicator-0.2.2.tgz",
-    "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react": "18.3.1",
+    "react-native": "0.75.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.1",
+    "@react-native/eslint-config": "0.75.1",
+    "@react-native/metro-config": "0.75.1",
+    "@react-native/typescript-config": "0.75.1",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-native-clean-project": "^4.0.3",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4"
 }
