--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fanchenbao/react-native-scroll-indicator",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "A React Native component that offers a customizable scroll indicator for ScrollView and FlatList",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -54,30 +54,37 @@
     "access": "public"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
-    "@react-native-community/eslint-config": "^3.0.2",
+    "@react-native/babel-preset": "0.75.1",
+    "@react-native/eslint-config": "0.75.1",
+    "@react-native/metro-config": "0.75.1",
+    "@react-native/typescript-config": "0.75.1",
     "@release-it/conventional-changelog": "^5.0.0",
-    "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.70.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.19.0",
     "husky": "^8.0.3",
-    "jest": "^28.1.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "2.8.8",
+    "react": "18.3.1",
+    "react-native": "0.75.1",
     "react-native-builder-bob": "^0.20.3",
+    "react-native-clean-project": "^4.0.3",
+    "react-test-renderer": "18.3.1",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "17.0.21"
+    "@types/react": "18.2.6"
   },
   "peerDependencies": {
     "react": "*",
